# discopop

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  DESIGN_results_visualization.md  Dockerfile  FileMapping.txt  LICENSE  MANIFEST.in  Makefile  PETGraph.py  README.md  Utils.py  VERSION  build_reduction.sh  commitlint.config.js  do_all_detector.py  geometric_decomposition_detector.py  install_notes  main.py  mypy.ini  parallelism_examples.rs  parallelism_examples.swift  parser.py  pattern_detection.py  pipeline_detector.py  pyproject.toml  reduction_detector.py  requirements.dev.txt  requirements.txt  run-normal.sh  run-poly.sh  run.sh  run_explorer.sh  setup.py  swift_outstandingissues.txt  task_parallelism_detector.py  tmp.dot  (+2 more)
GUI/: README.md  pyproject.toml
GUI/Abstracts/: Visualizable.py
GUI/Enums/: ViewerMode.py
GUI/Exceptions/: VisualizerNotDefined.py
GUI/Extendables/: Plottable.py
GUI/Types/: FrameT.py  ViewableCanvasT.py
GUI/Visualizers/: Base.py  WithSidebar.py
GUI/discopop_gui/: Constants.py
benchmark/: CMakeLists.txt  benchmarks.cpp
benchmark/memory_region_tree/: benchmark_memory_region_tree.cpp
benchmark/perfect_shadow/: benchmark_perfect_shadow.cpp
benchmark/scope/: benchmark_scope.cpp
example/: CMakeLists.txt  Data.xml  FileMapping.txt  Makefile  example.cpp  example.ll  example_dp.ll  execute_cmake_example.sh  loop_counter_output.txt  out_prof  out_prof_dep.txt  reduction.txt  solution1.cpp  solution2.cpp
explorer/: LICENSE  README.md  pyproject.toml
explorer/discopop_explorer/: __main__.py  conftest.py  discopop_explorer.py  pattern_detection.py  test_pattern_detection_ast_integration.py  test_utils.py  utils.py
hotspot_detection/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  hatch_build.py  pyproject.toml  setup.py
hotspot_detection/Detection/: detection.py  result_2.txt  result_3.txt
hotspot_detection/HotspotDetection/: CMakeLists.txt  HotspotDetection.cpp
hotspot_detection/discopop_hotspot_analyzer/: __main__.py  hotspot_analyzer.py
hotspot_detection/discopop_hotspot_cc/: __main__.py
hotspot_detection/discopop_hotspot_cmake/: __main__.py
hotspot_detection/discopop_hotspot_cxx/: __main__.py
hotspot_detection/hotspot_analyzer/: __main__.py  hotspot_analyzer.py
hotspot_detection/lulesh_results/: Readme.md  cs_id.txt  file_mapping.txt  hotspot_result_1.txt
hotspot_detection/rtlib/: CMakeLists.txt  rtlib.c
hotspot_detection/scripts/: CC_wrapper.sh  CMAKE_wrapper.sh  CMakeLists.txt  CXX_wrapper.sh  LINKER_wrapper.sh  detection.py  runHotspotDetection
hotspot_detection/skeleton/: Skeleton.cpp
hotspot_detection/test/: mycode.c  run.sh
mcp_server/: CLAUDE_INTEGRATION.md  DISTRIBUTION.md  INSTALLATION.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  SETUP_SUMMARY.md  VERSION  __init__.py  demo_test.py  pyproject.toml  server.py  setup-mcp.sh  setup_mcp.py  static_dependencies.py  test_server.py
mcp_server/tools/: __init__.py  check_configurations_status.py  check_hotspot_analysis_status.py  check_hotspot_profiling_status.py  check_parallelization_status.py  check_profiling_status.py  create_execution_configuration.py  gather_data.py  gather_static_data.py  get_configurations.py  get_data_dependencies.py  get_execution_results.py  get_parallelization_patches.py  get_static_data_dependencies.py  helpers.py  initialize_discopop_directory.py  instrument_for_hotspot_detection.py  instrument_project.py  manage_patches.py  run_hotspot_analysis.py  run_hotspot_profiling.py  run_instrumented_binary.py  run_pattern_detection.py  set_compile_script.py  test_create_execution_configuration.py  test_set_compile_script.py
profiler/: CMakeLists.txt  hatch_build.py  pyproject.toml  requirements.py
profiler/DiscoPoP/: CMakeLists.txt  DiscoPoP.cpp  DiscoPoP.hpp  Enums.hpp  Globals.cpp  Globals.hpp  RegisterPass.cpp  Structs.hpp
profiler/discopop_cc/: __main__.py
profiler/discopop_cxx/: __main__.py
profiler/rtlib/: CMakeLists.txt  DPTypes.hpp  runtimeFunctions.cpp  runtimeFunctions.hpp  runtimeFunctionsGlobals.cpp  runtimeFunctionsGlobals.hpp  runtimeFunctionsTypes.hpp
profiler/scripts/: CC_wrapper.sh  CMakeLists.txt  CXX_wrapper.sh  LINKER_wrapper.sh  MPI_CC_wrapper.sh  MPI_CXX_wrapper.sh  MPI_LINKER_wrapper.sh
reduction/llvm_pass/: CMakeLists.txt  ModuleFunc.cpp  Util.cpp  Util.h
rtlib/: CMakeLists.txt  CallStack.cpp  CallStack.hpp  DPTypes.hpp  DPUtils.h  DPUtils.hpp  DiscoPoP.syms.extra  Makefile.mk  MemoryRegionTree.cpp  MemoryRegionTree.hpp  abstract_shadow.h  abstract_shadow.hpp  cu_taken_branch_counter.cpp  cu_taken_branch_counter.hpp  iFunctions.cpp  iFunctions.h  iFunctions.hpp  iFunctionsGlobals.cpp  iFunctionsGlobals.hpp  iFunctionsTypes.cpp  iFunctionsTypes.hpp  loop_counter.cpp  loop_counter.h  loop_counter.hpp  perfect_shadow.h  perfect_shadow.hpp  runtimeFunctions.cpp  runtimeFunctions.hpp  runtimeFunctionsGlobals.cpp  runtimeFunctionsGlobals.hpp  runtimeFunctionsTypes.hpp  scope.hpp  shadow.h  shadow.hpp  signature.cpp  signature.h  signature.hpp
rtlib/callstack/: CallStack.cpp  CallStack.hpp
rtlib/calltree/: CallTree.cpp  CallTree.hpp  CallTreeGlobals.cpp  CallTreeGlobals.hpp  CallTreeNode.cpp  CallTreeNode.hpp  CallTreeNodeType.hpp  CallTreePreparedNodeBuffer.hpp  DependencyMetadata.cpp  DependencyMetadata.hpp  MetaDataQueue.cpp  MetaDataQueue.hpp  MetaDataQueueElement.cpp  MetaDataQueueElement.hpp  utils.cpp  utils.hpp
rtlib/functions/: FunctionManager.hpp  all.hpp  dp_add_bb_deps.cpp  dp_add_bb_deps.hpp  dp_alloca.cpp  dp_call.cpp  dp_decl.cpp  dp_decl.hpp  dp_delete.cpp  dp_delete.hpp  dp_finalize.cpp  dp_finalize.hpp  dp_func_entry.cpp  dp_func_exit.cpp  dp_loop_entry.cpp  dp_loop_entry.hpp  dp_loop_exit.cpp  dp_loop_exit.hpp  dp_new.cpp  dp_new.hpp  dp_read.cpp  dp_read.hpp  dp_report_bb.cpp  dp_report_bb_pair.cpp  dp_write.cpp  dp_write.hpp
rtlib/injected_functions/: all.hpp  dp_add_bb_deps.cpp  dp_alloca.cpp  dp_alloca.hpp  dp_call.cpp  dp_call.hpp  dp_decl.cpp  dp_delete.cpp  dp_delete.hpp  dp_finalize.cpp  dp_finalize.hpp  (+25 more)
(+4166 files in other folders)
