# This file is part of the DiscoPoP software (http://www.discopop.tu-darmstadt.de)
#
# Copyright (c) 2020, Technische Universitaet Darmstadt, Germany
#
# This software may be modified and distributed under the terms of
# the 3-Clause BSD License.  See the LICENSE file in the package base
# directory for details.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discopop"
dynamic = ["version"]
description = "DiscoPoP is a tool that helps software developers parallelize their programs with threads. It discovers potential parallelism in a sequential program and makes recommendations on how to exploit it."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "TU Darmstadt and Iowa State University", email = "discopop@lists.parallel.informatik.tu-darmstadt.de"},
]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
dependencies = [
    "contextlib2>=0.5.5",
    "argparse",
    "extrap",
    "jsonpickle",
    "jsons",
    "lxml>=4.3.3",
    "matplotlib",
    "networkx",
    "numpy>=1.16.3",
    "pluginbase>=1.0.0",
    "pstats2",
    "schema>=0.7.0",
    "sympy",
    "sympy_plot_backends",
    "alive_progress",
    "filelock",
    "pydot",
    "tabulate",
    "PyQt6",
    "plotille",
    "setuptools",
    "packaging",
    "requests",
    "termcolor",
]

[project.optional-dependencies]
dev = ["mypy", "black", "data-science-types", "pre-commit"]
ci = ["mypy", "black", "data-science-types"]

[project.urls]
Homepage = "https://www.discopop.tu-darmstadt.de/"

[project.scripts]
discopop_explorer = "discopop_explorer.__main__:main"
discopop_optimizer = "discopop_library.discopop_optimizer.__main__:main"
discopop_patch_generator = "discopop_library.PatchGenerator.__main__:main"
discopop_patch_applicator = "discopop_library.PatchApplicator.__main__:main"
discopop_config_provider = "discopop_library.ConfigProvider.__main__:main"
discopop_auto_tuner = "discopop_library.EmpiricalAutotuning.__main__:main"
discopop_sanity_checker = "discopop_library.SanityChecker.__main__:main"
discopop_preprocessor = "discopop_library.PreProcessor.__main__:main"
discopop_project_manager = "discopop_library.ProjectManager.__main__:main"
discopop_configuration_manager = "discopop_library.ConfigurationManager.__main__:main"
discopop_dependency_comparator = "discopop_library.DependencyComparator.__main__:main"
discopop_parallel_region_merger = "discopop_library.ParallelRegionMerger.__main__:main"

[tool.setuptools.dynamic]
version = {file = "discopop_library/global_data/version/VERSION"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
zip-safe = true
include-package-data = true
