# This file is part of the DiscoPoP software (http://www.discopop.tu-darmstadt.de)
#
# Copyright (c) 2020, Technische Universitaet Darmstadt, Germany
#
# This software may be modified and distributed under the terms of
# the 3-Clause BSD License.  See the LICENSE file in the package base
# directory for details.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discopop-gui"
dynamic = ["version"]
description = "DiscoPoP GUI: graphical user interface components for the DiscoPoP parallelization framework."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "TU Darmstadt and Iowa State University", email = "discopop@lists.parallel.informatik.tu-darmstadt.de"},
]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
dependencies = [
    "matplotlib",
]

[project.optional-dependencies]
dev = ["mypy", "black", "pre-commit"]
ci = ["mypy", "black"]

[project.urls]
Homepage = "https://www.discopop.tu-darmstadt.de/"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["discopop_gui*"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.package-data]
discopop_gui = ["py.typed"]
