# This file is part of the DiscoPoP software (http://www.discopop.tu-darmstadt.de)
#
# Copyright (c) 2020, Technische Universitaet Darmstadt, Germany
#
# This software may be modified and distributed under the terms of
# the 3-Clause BSD License.  See the LICENSE file in the package base
# directory for details.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discopop-explorer"
dynamic = ["version"]
description = "DiscoPoP Explorer: parallel pattern detection and analysis for the DiscoPoP framework."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "TU Darmstadt and Iowa State University", email = "discopop@lists.parallel.informatik.tu-darmstadt.de"},
]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
dependencies = [
    "discopop-library",
    "alive_progress",
    "filelock",
    "jsonpickle",
    "lxml>=4.3.3",
    "matplotlib",
    "networkx",
    "numpy>=1.16.3",
    "pluginbase>=1.0.0",
    "pstats2",
]

[project.optional-dependencies]
dev = ["mypy", "black", "data-science-types", "pre-commit"]
ci = ["mypy", "black", "data-science-types"]

[project.urls]
Homepage = "https://www.discopop.tu-darmstadt.de/"

[project.scripts]
discopop_explorer = "discopop_explorer.__main__:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["discopop_explorer*"]

[tool.setuptools.package-data]
discopop_explorer = ["py.typed"]

[tool.setuptools]
zip-safe = true
