# This file is part of the DiscoPoP software (http://www.discopop.tu-darmstadt.de)
#
# Copyright (c) 2020, Technische Universitaet Darmstadt, Germany
#
# This software may be modified and distributed under the terms of
# the 3-Clause BSD License.  See the LICENSE file in the package base
# directory for details.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discopop-mcp-server"
dynamic = ["version"]
description = "MCP Server for DiscoPoP - Enables Claude to interact with DiscoPoP profiling and analysis tools"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
authors = [
    {name = "TU Darmstadt and Iowa State University", email = "discopop@lists.parallel.informatik.tu-darmstadt.de"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "mypy",
    "black",
]

[project.scripts]
discopop-mcp-server = "server:main"

[project.urls]
Homepage = "https://www.discopop.tu-darmstadt.de/"
Repository = "https://github.com/discopop-tool/discopop"
Documentation = "https://www.discopop.tu-darmstadt.de/"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools]
py-modules = ["server"]
zip-safe = true
